--- a/styles/styles.global.scss
+++ b/styles/styles.global.scss
@@ -13,7 +13,7 @@ html, body {
   margin: 0px;
   background-color: $dark_blue;
   color: $white;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 #__next {
